trying to fix background on mobile

--- a/scss/components/_main_home.scss
+++ b/scss/components/_main_home.scss
@@ -228,8 +228,7 @@
     }
 
     .main-wrapper {
-        background-image:none;
-        background-color: aquamarine;
+        background-image: url(../assets/img/bg_mobile.jpg);
         position: sticky;
         top: 0;
         z-index: -1;
