--- a/scss/root/_reset.scss
+++ b/scss/root/_reset.scss
@@ -22,7 +22,7 @@ a {
 body {
     font-family: 'Noto Sans', sans-serif;
     color: $black;
-    background-color: $blue;
+    // background-color: $blue;
     height: 100%;
 }
 
